src/app/header/header.component.css
header {
  display: block;
  position: relative;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background: url("assets/images/header-img.jpg");
  background-position: bottom;
  background-size: 100%;
  color: #fff;
  background-repeat: no-repeat;
  height: 100vh;
}

header .tagline {
  padding-top: 90px;
  position: relative;
  z-index: 2;
  padding-left: 20px;
  text-shadow: #06060678 0px 0px 10px;
}

header .tagline h1 {
  font-size: 4rem;
  line-height: 4rem;
  text-shadow: none;
}

header .tagline p {
  width: 40%;
}
header .tagline a {
  font-weight: bold;
}

.actions {
  display: flex;
  width: 400px;
  flex-direction: row;
}

/*------------------------- MEDIA QUERIES ---------------------------*/

@media (max-width: 1300px) and (min-width: 1000px) {
  header {
    height: 800px;
  }

  header .tagline {
    padding-top: 50px;
  }
  main div.single-block {
    width: 60%;
  }
  main div.single-block,
  main div.multi-section,
  main div.multi-section-two {
    padding: 10px;
    margin: 50px auto;
  }
  main {
    margin-top: 130px;
  }
}

@media (max-width: 999px) and (min-width: 750px) {
  header .tagline {
    padding-top: 10px;
  }
  header {
    height: 450px;
  }
  header .tagline h1 {
    font-size: 2rem;
    line-height: 2rem;
  }
  header .tagline p {
    width: 60%;
  }
}

@media (max-width: 749px) and (min-width: 600px) {
  header .tagline {
    padding-top: 20px;
  }
  header {
    height: 250px;
  }
  header .tagline h1 {
    font-size: 2rem;
    line-height: 2rem;
  }
  header .tagline p {
    display: none;
  }
}

@media (max-width: 599px) and (min-width: 320px) {
  header .tagline {
    padding-top: 15px;
  }

  header {
    height: 350px;
    background-size: 200%;
  }
  header .tagline h1 {
    font-size: 1.1rem;
    line-height: 1.1rem;
  }
  header .tagline p {
    display: none;
  }

  .actions {
    flex-direction: column;
  }

  .actions > a {
    padding: 5px;
    font-size: 10px;
    width: 80px;
  }
}

